--- a/cloud-formation/ci-cd-gihub-codepipeline-ec2/pipeline.yaml
+++ b/cloud-formation/ci-cd-gihub-codepipeline-ec2/pipeline.yaml
@@ -1,3 +1,15 @@
+Parameters:
+  GithubOwner:
+    Type: String
+    AllowedPattern: "[A-Za-z0-9-]+"
+    Default: quick-refs
+  GithubRepository:
+    Type: String
+    AllowedPattern: "[A-Za-z0-9-]+"
+  GithubBranch:
+    Type: String
+    AllowedPattern: "[A-Za-z0-9-]+"
+    Default: master
 Resources:
   CodeBuildServiceRole:
     Type: "AWS::IAM::Role"
@@ -56,7 +68,7 @@ Resources:
       ServiceRole: !GetAtt CodeBuildServiceRole.Arn
       Source:
         Type: GITHUB
-        Location: "https://github.com/eduardo-cess/curriculum_html.git"
+        Location: !Sub "https://github.com/${GithubOwner}/${GithubRepository}.git"
         BuildSpec: buildspec.yml
         Auth:
           Type: OAUTH
@@ -67,9 +79,9 @@ Resources:
         Webhook: true
         FilterGroups:
           - - Type: EVENT
-              Pattern: "PULL_REQUEST_CREATED, PULL_REQUEST_UPDATED"
+              Pattern: "PULL_REQUEST_CREATED, PULL_REQUEST_UPDATED, PULL_REQUEST_REOPENED"
             - Type: BASE_REF
-              Pattern: !Sub ^refs/heads/master$
+              Pattern: !Sub ^refs/heads/${GithubBranch}$
       Environment:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
