--- a/cloud-formation/ci-cd-gihub-codepipeline-ec2/pipeline.yaml
+++ b/cloud-formation/ci-cd-gihub-codepipeline-ec2/pipeline.yaml
@@ -9,7 +9,7 @@ Parameters:
     Default: master
 Resources:
   CodeBuildServiceRole:
-    Type: "AWS::IAM::Role"
+    Type: 'AWS::IAM::Role'
     Properties:
       AssumeRolePolicyDocument:
         Version: 2012-10-17
@@ -17,7 +17,7 @@ Resources:
           - Effect: Allow
             Principal:
               Service: codebuild.amazonaws.com
-            Action: "sts:AssumeRole"
+            Action: 'sts:AssumeRole'
       Policies:
         - PolicyName: root
           PolicyDocument:
@@ -26,46 +26,49 @@ Resources:
               - Sid: CloudWatchLogsPolicy
                 Effect: Allow
                 Action:
-                  - "logs:CreateLogGroup"
-                  - "logs:CreateLogStream"
-                  - "logs:PutLogEvents"
-                Resource: "*"
+                  - 'logs:CreateLogGroup'
+                  - 'logs:CreateLogStream'
+                  - 'logs:PutLogEvents'
+                Resource: '*'
               - Sid: CodeCommitPolicy
                 Effect: Allow
                 Action:
-                  - "codecommit:GitPull"
-                Resource: "*"
+                  - 'codecommit:GitPull'
+                Resource: '*'
               - Sid: S3GetObjectPolicy
                 Effect: Allow
                 Action:
-                  - "s3:GetObject"
-                  - "s3:GetObjectVersion"
-                Resource: "*"
+                  - 's3:GetObject'
+                  - 's3:GetObjectVersion'
+                Resource: '*'
               - Sid: S3PutObjectPolicy
                 Effect: Allow
                 Action:
-                  - "s3:PutObject"
-                Resource: "*"
+                  - 's3:PutObject'
+                Resource: '*'
               - Sid: S3BucketIdentity
                 Effect: Allow
                 Action:
-                  - "s3:GetBucketAcl"
-                  - "s3:GetBucketLocation"
-                Resource: "*"
+                  - 's3:GetBucketAcl'
+                  - 's3:GetBucketLocation'
+                Resource: '*'
   CodeBuildSourceCredential:
-    Type: "AWS::CodeBuild::SourceCredential"
+    Type: 'AWS::CodeBuild::SourceCredential'
     Properties:
       AuthType: PERSONAL_ACCESS_TOKEN
       ServerType: GITHUB
-      Token: "{{resolve:secretsmanager:GITHUB_ACCESS:SecretString:GITHUB_ACCESS_TOKEN}}"
+      Token: >-
+        {{resolve:secretsmanager:GITHUB_ACCESS:SecretString:GITHUB_ACCESS_TOKEN}}
   CodeBuildProject:
-    Type: "AWS::CodeBuild::Project"
+    Type: 'AWS::CodeBuild::Project'
     Properties:
-      Name: !Ref "AWS::StackName"
-      ServiceRole: !GetAtt CodeBuildServiceRole.Arn
+      Name: !Ref 'AWS::StackName'
+      ServiceRole: !GetAtt 
+        - CodeBuildServiceRole
+        - Arn
       Source:
         Type: GITHUB
-        Location: !Sub "https://github.com/${GithubOwner}/${GithubRepository}.git"
+        Location: !Sub 'https://github.com/${GithubOwner}/${GithubRepository}.git'
         BuildSpec: buildspec.yml
         Auth:
           Type: OAUTH
@@ -76,10 +79,127 @@ Resources:
         Webhook: true
         FilterGroups:
           - - Type: EVENT
-              Pattern: "PULL_REQUEST_CREATED, PULL_REQUEST_UPDATED, PULL_REQUEST_REOPENED"
+              Pattern: >-
+                PULL_REQUEST_CREATED, PULL_REQUEST_UPDATED,
+                PULL_REQUEST_REOPENED
             - Type: BASE_REF
-              Pattern: !Sub ^refs/heads/${GithubBranch}$
+              Pattern: !Sub '^refs/heads/${GithubBranch}$'
       Environment:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/standard:4.0
+        Image: 'aws/codebuild/standard:4.0'
+  CodePipelineServiceRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: codepipeline.amazonaws.com
+            Action: 'sts:AssumeRole'
+      Policies:
+        - PolicyName: root
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: CloudWatchLogsPolicy
+                Effect: Allow
+                Action:
+                  - 'logs:CreateLogGroup'
+                  - 'logs:CreateLogStream'
+                  - 'logs:PutLogEvents'
+                Resource: '*'
+              - Sid: CodeCommitPolicy
+                Effect: Allow
+                Action:
+                  - 'codecommit:GitPull'
+                Resource: '*'
+              - Sid: S3GetObjectPolicy
+                Effect: Allow
+                Action:
+                  - 's3:GetObject'
+                  - 's3:GetObjectVersion'
+                Resource: '*'
+              - Sid: S3PutObjectPolicy
+                Effect: Allow
+                Action:
+                  - 's3:PutObject'
+                Resource: '*'
+              - Sid: S3BucketIdentity
+                Effect: Allow
+                Action:
+                  - 's3:GetBucketAcl'
+                  - 's3:GetBucketLocation'
+                Resource: '*'
+              - Sid: CodeBuildPolicy
+                Effect: Allow
+                Action:
+                  - 'codebuild:BatchGetBuilds'
+                  - 'codebuild:StartBuild'
+                Resource: '*'
+  CodePipelineArtifactStore:
+    Type: 'AWS::S3::Bucket'
+    Properties:
+      VersioningConfiguration:
+        Status: Enabled
+  CodePipelineWebhook:
+    Type: 'AWS::CodePipeline::Webhook'
+    Properties:
+      Authentication: GITHUB_HMAC
+      AuthenticationConfiguration:
+        SecretToken: >-
+          {{resolve:secretsmanager:GITHUB_ACCESS:SecretString:GITHUB_ACCESS_TOKEN}}
+      RegisterWithThirdParty: 'true'
+      Filters:
+        - JsonPath: $.ref
+          MatchEquals: 'refs/heads/{Branch}'
+        - JsonPath: $.repository.name
+          MatchEquals: '{Repo}'
+      TargetPipeline: !Ref CodePipeline
+      TargetAction: Source
+      TargetPipelineVersion: !GetAtt 
+        - CodePipeline
+        - Version
+  CodePipeline:
+    Type: 'AWS::CodePipeline::Pipeline'
+    Properties:
+      Name: !Ref 'AWS::StackName'
+      RoleArn: !GetAtt 
+        - CodePipelineServiceRole
+        - Arn
+      ArtifactStore:
+        Type: S3
+        Location: !Ref CodePipelineArtifactStore
+      Stages:
+        - Name: Source
+          Actions:
+            - Name: Source
+              ActionTypeId:
+                Category: Source
+                Owner: ThirdParty
+                Provider: GitHub
+                Version: 1
+              Configuration:
+                Owner: !Ref GithubOwner
+                Repo: !Ref GithubRepository
+                Branch: !Ref GithubBranch
+                PollForSourceChanges: false
+                OAuthToken: >-
+                  {{resolve:secretsmanager:GITHUB_ACCESS:SecretString:GITHUB_ACCESS_TOKEN}}
+              OutputArtifacts:
+                - Name: SourceCode
+        - Name: Build
+          Actions:
+            - Name: Build
+              ActionTypeId:
+                Category: Build
+                Owner: AWS
+                Provider: CodeBuild
+                Version: '1'
+              Configuration:
+                ProjectName: !Ref CodeBuildProject
+              OutputArtifacts:
+                - Name: BuildOutput
+              InputArtifacts:
+                - Name: SourceCode
