--- a/cloud-formation/ec2-instance-with-s3-access/main.yaml
+++ b/cloud-formation/ec2-instance-with-s3-access/main.yaml
@@ -1,7 +1,10 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: Part 1 - Build a webapp stack with CloudFormation
+Description: Creates an EC2 with S3 and RDS access, and codeploy agent
 
 Parameters:
+  Region:
+    Type: String
+    Default: us-east-1
   AvailabilityZone:
     Type: AWS::EC2::AvailabilityZone::Name
   EnvironmentType:
@@ -56,6 +59,17 @@ Resources:
         Fn::Base64:
           !Sub |
             #!/bin/bash
+            sudo su
+            apt-get -y update
+            curl -s https://deb.nodesource.com/setup_16.x | bash
+            apt-get -y install jq awscli ruby
+            apt install nodejs -y
+            npm install pm2 -g
+            cd /tmp/
+            REGION=$(curl -s 169.254.169.254/latest/dynamic/instance-identity/document | jq -r ".region")
+            wget https://aws-codedeploy-${Region}.s3.amazonaws.com/latest/install
+            chmod +x ./install
+            ./install auto
             ${UserDataScript}
       IamInstanceProfile: !Ref S3BucketsInstanceProfile
 
@@ -106,6 +120,10 @@ Resources:
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8080
+          ToPort: 8080
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 443
