--- a/cloud-formation/ec2-instance/main.yaml
+++ b/cloud-formation/ec2-instance/main.yaml
@@ -27,6 +27,11 @@ Parameters:
   UserDataScript:
     Type: String
     Description: EC2 Userdata script
+  LogsDirectory:
+    Type: String
+    Description: Logs directory full path
+  LogsFileName:
+    Type: String
 
 Mappings:
   EnvironmentToInstanceType:
@@ -70,6 +75,24 @@ Resources:
             wget https://aws-codedeploy-${Region}.s3.amazonaws.com/latest/install
             chmod +x ./install
             ./install auto
+            
+            mkdir /home/cloudwatch/
+            mkdir ${LogsDirectory}
+            touch ${LogsDirectory}/${LogsFileName}
+
+            echo "[general]
+            state_file = /var/awslogs/state/agent-state
+            [${LogsDirectory}/${LogsFileName}]
+            datetime_format = %d/%b/%Y:%H:%M:%S
+            file = ${LogsDirectory}/${LogsFileName}
+            buffer_duration = 5000
+            log_stream_name = ${LogsFileName}
+            initial_position = start_of_file
+            log_group_name = Ec2Bot" > /home/cloudwatch/awslogs.conf
+
+            curl https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py -O
+            python ./awslogs-agent-setup.py --region us-east-1 --non-interactive -c /home/cloudwatch/awslogs.conf
+
             ${UserDataScript}
       IamInstanceProfile: !Ref S3BucketsInstanceProfile
 
@@ -94,6 +117,14 @@ Resources:
           Effect: Allow
           Action:
           - ssm:GetParameters
+          Resource: "*"
+        - Sid: CloudWatchPolicy
+          Effect: Allow
+          Action:
+          - logs:CreateLogGroup
+          - logs:CreateLogStream
+          - logs:PutLogEvents
+          - logs:DescribeLogStreams
           Resource: "*"
       Roles:
       - Ref: S3BucketsRole
